@@ -17,12 +17,17 @@
 package org.apache.solr.util.tracing;
 
 import io.opentracing.Span;
+import io.opentracing.Tracer;
 import io.opentracing.noop.NoopSpan;
+import io.opentracing.propagation.Format;
 import io.opentracing.tag.Tags;
+import io.opentracing.util.GlobalTracer;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
+import org.apache.http.HttpRequest;
 import org.apache.solr.request.SolrQueryRequest;
+import org.eclipse.jetty.client.api.Request;
 
 /** Utilities for distributed tracing. */
 public class TraceUtils {
@@ -45,6 +50,22 @@ public class TraceUtils {
   public static void ifNotNoop(Span span, Consumer<Span> consumer) {
     if (IS_RECORDING.test(span)) {
       consumer.accept(span);
+    }
+  }
+
+  public static void injectTraceContext(Request req, Span span) {
+    Tracer tracer = GlobalTracer.get();
+    if (span != null) {
+      tracer.inject(span.context(), Format.Builtin.HTTP_HEADERS, new SolrJettyRequestCarrier(req));
+    }
+  }
+
+  public static void injectTraceContext(HttpRequest req) {
+    Tracer tracer = GlobalTracer.get();
+    Span span = tracer.activeSpan();
+    if (span != null) {
+      tracer.inject(
+          span.context(), Format.Builtin.HTTP_HEADERS, new SolrApacheHttpRequestCarrier(req));
     }
   }
 
